--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.15.0",
     "@tailwindcss/vite": "^4.1.12",
+    "dotenv": "^17.2.1",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
